# risk-atlas-nexus-demos

./: MAINTAINERS.md  README.md
agentic-governance/: README.md
agentic-governance/agentic_governance/agents/: base.py  orchestrator.py  risk_assessment.py  stream.py
agentic-governance/agentic_governance/toolkit/: enums.py
agentic-governance/benchmark/ground_truth/: customer_complaints.json
agentic-governance/cli/: server_config.yaml
agentic-governance/notebooks/: 1_check_ollama.ipynb  5_cot_usecase_relevance_drift_function_calling.ipynb
auto-benchmarkcard/: .env.example  .gitignore  README.md  pyproject.toml
auto-benchmarkcard/notebooks/: demo_notebook.ipynb
gaf-guard/: .env.example  .gitignore  README.md  pyproject.toml
gaf-guard/agentic_governance/: templates.py
gaf-guard/agentic_governance/agents/: __init__.py  drift_monitoring.py  human_in_the_loop.py  risk_generation.py
gaf-guard/agentic_governance/core/: agent_builder.py
gaf-guard/agentic_governance/data/: customer_complaints_prompts.json  risk_generation_cot.json
gaf-guard/agentic_governance/toolkit/: config_utils.py  conn_manager.py  decorators.py  logging.py
gaf-guard/app/cli/: client.py  run_benchmark.py  server.py  server_config.yaml  spec.yaml
gaf-guard/app/langchain/: langgraph.json  main.py
gaf-guard/app/langgraph-studio/: main.py
gaf-guard/apps/cli/: benchmark_client.py  client.py
gaf-guard/apps/langgraph-studio/: main.py
gaf-guard/benchmark/: input_prompts.py  metric.py  run.py
gaf-guard/benchmark/ground_truth/: customer_complaints.json  customer_service.json
gaf-guard/cli/: client.py  server.py  spec.yaml
gaf-guard/examples/data/assessment/: prompts.json
gaf-guard/examples/notebooks/: 2_cot_agent.ipynb  3_check_granite_guardian.ipynb  cot.json  show_agent_workflow.ipynb
gaf-guard/examples/server_configs/: risk_assessment.yaml
gaf-guard/gaf_guard/agents/: __init__.py  base.py  benchmark.py  drift_monitoring.py  human_in_the_loop.py  orchestrator.py  risk_assessment.py  risk_generation.py  stream.py
gaf-guard/gaf_guard/core/: agent_builder.py
gaf-guard/gaf_guard/data/: sample_prompts.json
gaf-guard/gaf_guard/toolkit/: conn_manager.py  decorators.py  enums.py  file_utils.py  logging.py  models.py  tmp_utils.py
gaf-guard/langchain_ui/: main.py
gaf-guard/notebooks/: 2_cot_agent_function_calling.ipynb  4_cot_agent_granite_guardian.ipynb  5_cot_usecase_relevance_drift.ipynb  show_agent_workflow.ipynb
gaf-guard/src/gaf_guard/: __init__.py  config.py  serve.py
gaf-guard/src/gaf_guard/core/: agent_builder.py  decorators.py  models.py
gaf-guard/src/gaf_guard/core/agents/: __init__.py  base.py  benchmark.py  drift_monitoring.py  human_in_the_loop.py  orchestrator.py  risk_assessment.py  risk_generation.py  stream.py  trial_logger.py
gaf-guard/src/gaf_guard/toolkit/: enums.py  exceptions.py  file_utils.py  logging.py
gaf-guard/trials/: Trial_2025-05-30_22:04:35.json  Trial_2025-06-08_00:51:33.json  Trial_2025-06-08_22:55:29.json  Trial_2025-07-14_01:48:14.json
neo4j-db/: README.md
neo4j-db/examples/: README.md  ai-risk-ontology.cypher
ran-viz/: README.md
ran-viz/python/: requirements.txt
taxonomy-judge/: .gitignore  main.py  requirements.txt
(+32 files in other folders)
