[project]
name = "gaf_guard"
version = "0.0.1"
authors = [
    { name = "Seshu Tirupati", email = "seshutir@ie.ibm.com" },
    { name = "Dhaval Salwala", email = "dhaval.vinodbhai.salwala@ibm.com" },
    { name = "Inge Vejsbjerg", email = "ingevejs@ie.ibm.com" },
    { name = "Elizabeth Daly", email = "elizabeth.daly@ie.ibm.com" },
]
keywords = [
    "agentic ai governance",
    "ai risk monitoring",
    "risk evaluation",
    "human in the loop",
]
description = "An Agentic AI framework that can effectively detect and manage risks associated with LLMs for a given use-case."
readme = "README.md"
requires-python = ">=3.11, <3.12"
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    "risk-atlas-nexus",
    "langchain",
    "langgraph",
    "pydantic_settings",
    "typer",
    "langgraph-cli[inmem]",
    "python-dotenv",
    "deepeval",
    "openai",
    "prettytable",
    "isort",
    "pre-commit",
]

[project.optional-dependencies]
ollama = ["ollama"]
wml = ["ibm-watsonx-ai"]
vllm = ["vllm", "xgrammar"]

[tool.setuptools]
packages = ["gaf_guard"]

[tool.isort]
profile = "black"
line_length = 88
remove_redundant_aliases = true
group_by_package = true
combine_star = true
lines_after_imports = 2

[project.urls]
Homepage = "https://github.com/IBM/risk-atlas-nexus-demos/tree/main/gaf-guard"
Documentation = "https://github.com/IBM/risk-atlas-nexus-demos/tree/main/gaf-guard"
